<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!--Add image for home screen logo. -->
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/space_normal"
            android:contentDescription="@string/logo"
            android:src="@drawable/ballot_logo"/>
        <!--Add Button to navigate to upcoming elections. -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/upcoming_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_election"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/representative_button"
                style="@style/main_button_style"/>
        <!--Add Button to navigate to representatives. -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/representative_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/representatives"
            style="@style/main_button_style" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>