<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_normal">
        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="@dimen/space_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile"
            app:profileImage="@{representative.official.photoUrl}"
            android:contentDescription="@{@string/content_des_image(representative.official.name)}" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/representative_title"
            app:layout_constraintStart_toEndOf="@+id/profile_photo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/half_space"
            android:text="@{representative.office.name}"
            style="@style/MySubTitle"
            tools:text="@string/representative_title" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/representative_name"
            android:text="@{representative.official.name}"
            app:layout_constraintStart_toStartOf="@id/representative_title"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            tools:text="@string/representative_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/representative_party"
            android:text="@{representative.official.party}"
            app:layout_constraintStart_toStartOf="@id/representative_title"
            app:layout_constraintTop_toBottomOf="@id/representative_name"
            tools:text="@string/representative_party" />
        <ImageView
            android:id="@+id/website_image_view"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_www"
            android:layout_marginEnd="@dimen/half_space"
            android:layout_marginBottom="@dimen/half_space"
            android:contentDescription="@{@string/content_des_webpage(representative.official.name)}"
            app:layout_constraintEnd_toStartOf="@+id/facebook_image_view"
            app:layout_constraintBottom_toBottomOf="@id/representative_party"/>
        <ImageView
            android:id="@+id/facebook_image_view"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_facebook"
            android:layout_marginEnd="@dimen/half_space"
            android:layout_marginBottom="@dimen/half_space"
            android:contentDescription="@{@string/content_des_facebook(representative.official.name)}"
            app:layout_constraintEnd_toStartOf="@+id/twitter_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/representative_party"/>
        <ImageView
            android:id="@+id/twitter_image_view"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_twitter"
            android:layout_marginEnd="@dimen/half_space"
            android:layout_marginBottom="@dimen/half_space"
            android:contentDescription="@{@string/content_des_twitter(representative.official.name)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/representative_party"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>